<?xml version="1.0" encoding="utf-8"?>
<menu 
    xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item
        android:id="@+id/searchlist_menu_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="always"
        android:title="@string/action_refresh"/>
    <item 
        android:id="@+id/searchlist_menu_dropdown"
        android:icon="@drawable/ic_action_overflow"
        android:showAsAction="always"
        android:title="@string/dropdown" >
        <menu>
            <item 
                android:id="@+id/searchlist_menu_main"
                android:title="@string/title_activity_main" />
            <item
                android:id="@+id/searchlist_menu_settings"
                android:title="@string/recommandation"/>
        </menu>
    </item>
</menu>