<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity" >

    
    
    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/search_edit_text" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/searchButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/searchEditText"
        android:layout_alignBottom="@+id/searchEditText"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/searchEditText"
        android:text="@string/search_Button" />

    <Button
        android:id="@+id/category1Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/progressBar1"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/searchButton"
        android:layout_marginBottom="18dp"
        android:text="@string/Category1_Button" />

    <Button
        android:id="@+id/category2Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/progressBar1"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/category1Button"
        android:layout_marginBottom="42dp"
        android:text="@string/Category2_Button" />

    <Button
        android:id="@+id/category3Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/category2Button"
        android:layout_alignTop="@+id/progressBar1"
        android:layout_marginTop="43dp"
        android:text="@string/Category3_Button" />

</RelativeLayout>